--- a/App1/backend/Dockerfile
+++ b/App1/backend/Dockerfile
@@ -2,8 +2,8 @@ FROM node:22-alpine3.20
 
 ENV DB_USER="postgres"
 ENV DB_HOST="host.docker.internal"
-ENV DB_NAME="todo_pg"
-ENV DB_PASSWORD="techstarter"
+ENV DB_NAME="my_to_do_app"
+ENV DB_PASSWORD="1234"
 ENV DB_PORT=5433
 
 WORKDIR /backend
